﻿- Update AlgernonCommons


Version 1.2

- Adjust options panel layout
- Implement AlgernonCommons


Version 1.1.3

- Automatically refresh options panel on language change
- Update bundled CitiesHarmony API to 2.1.0


Version 1.1.2

- Adjust options panel layout to accomodate longer translation strings
- Change settings file location from application directory to user directory


Version 1.1.1

- Add mouse lighting to BulldozeTool and ZoneTool


Version 1.1

- Add mouse lighting to NetTool and MoveItTool