@@ -6,11 +6,24 @@
 namespace EnlightenYourMouse
 {
     using AlgernonCommons.Patching;
+    using ICities;
 
     /// <summary>
     /// Main loading class: the mod runs from here.
     /// </summary>
     public sealed class Loading : PatcherLoadingBase<OptionsPanel, PatcherBase>
     {
+        /// <summary>
+        /// Performs any actions when the mod is deactivated during OnCreated.
+        /// E.g. can be used to revert Harmony patches if a mod conflict is detected.
+        /// </summary>
+        /// <param name="mode">Loading mode (e.g. game, editor, scenario, etc.).</param>
+        protected override void LoadedActions(LoadMode mode)
+        {
+            base.LoadedActions(mode);
+
+            // Activate UUI button.
+            MouseLight.AddUUIButton();
+        }
     }
 }
