@@ -1,4 +1,5 @@
-﻿- Update AlgernonCommons
+﻿- Add UUI light toggle
+- Update AlgernonCommons
 
 
 Version 1.2
